# so-paginacao

./: README.md  document.md  pyproject.toml
pagesim/: main.py
pagesim/core/: disk.py  models.py  page_table.py  pager_service.py  ram.py  simulator.py
pagesim/policies/: base.py  fifo.py  lfu.py  lru.py  mfu.py  nru.py  opt.py  segunda_chance.py
