[tool.poetry]
name = "pagesim"
version = "1.0.0"
description = "Simulador de algoritmos de substituição de páginas"
readme = "README.md"
authors = [
    "Israel Nícolas de Souza Mendes",
    "Guilherme Gomes Botelho",
    "Denis da Silva Victor"
]
packages = [{include = "pagesim/main.py"}]
repository = "https://github.com/israelnicolas940/so-paginacao"
documentation = "https://github.com/israelnicolas940/so-paginacao#readme"
keywords = [
    "operating-systems",
    "page-replacement",
    "memory-management",
    "virtual-memory",
    "fifo",
    "lru",
    "simulator",
    "os-education"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
cmd2 = "^2.4.3"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pagesim = "pagesim.main:cli"

[tool.mypy]
strict = true
cache_dir = ".mypy_cache"
files = ["core"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov-report=term-missing"
